--- a/assets/scss/core/_page-transition.scss
+++ b/assets/scss/core/_page-transition.scss
@@ -1,5 +1,10 @@
-.body-page-transition{
+html {
+  scroll-behavior: smooth;
+}
+
+.body-page-transition {
   overflow: hidden;
+
   #page-transition {
     position: fixed;
     z-index: 9999;
@@ -10,8 +15,8 @@
     align-items: center;
   }
 
-  #page-transition > div{
-    &:after{
+  #page-transition>div {
+    &:after {
       content: "";
       background-image: url("../img/bg7.jpg");
       background-size: cover;
@@ -22,6 +27,7 @@
       top: 0;
       left: 0;
     }
+
     &:before {
       top: 0;
       left: 0;
