--- a/assets/scss/nextjs-material-kit.scss
+++ b/assets/scss/nextjs-material-kit.scss
@@ -28,3 +28,6 @@
 @import "plugins/plugin-nouislider";
 @import "plugins/plugin-react-datetime";
 @import "plugins/plugin-react-slick";
+
+// CSS OVERRIDE
+@import "override/override.scss"
