turn the background transparent for loading

--- a/assets/scss/core/_page-transition.scss
+++ b/assets/scss/core/_page-transition.scss
@@ -18,7 +18,7 @@ html {
   #page-transition>div {
     &:after {
       content: "";
-      background-image: url("../img/bg7.jpg");
+      // background-image: url("../img/bg7.jpg");
       background-size: cover;
       position: fixed;
       z-index: 9998;
